...
          ))}
        </Stack>
      ) : null}
      <Spacer style={{ height: SPACE }} />
      <Stack center spacing={2}>
        <Button
          testID="add-item"
          onPress={addItem}
          color={THEME.primary}
          title={COPY.list.add_item}
          uppercase={false}
          disabled={!isEnabled}
          titleStyle={{ color: isEnabled ? THEME.white : THEME.secondary }}
...
